--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,43 @@
-# Compiled class file
-*.class
+#Eclipse project files
+.project
+.classpath
+.settings
+#IntelliJ IDEA project files and directories
+*.iml
+*.ipr
+*.iws
+.idea/
+#Geany project file
+.geany
+#KDevelop project file and directory
+.kdev4/
+*.kdev4
+#Build targets
+/target
+*/target
+#Report directories
+/reports
+*/reports
+#Mac-specific directory that no other operating system needs.
+.DS_Store
 
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+#Scala-play project files
+logs
+project/project
+project/target
+target
+tmp
+.history
+dist
+/.idea
+/*.iml
+/out
+/.idea_modules
+/.classpath
+/.project
+/RUNNING_PID
+/.settings
+*.log*
+*/*.log*
+dep.txt
+*.rdb
