--- a/ddd-show-code-controller/pom.xml
+++ b/ddd-show-code-controller/pom.xml
@@ -9,19 +9,21 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ddd-show-code-biz</artifactId>
+    <artifactId>ddd-show-code-controller</artifactId>
 
 
     <dependencies>
+        <!--  app 入口标准-->
         <dependency>
             <groupId>ddd</groupId>
-            <artifactId>ddd-show-code-common</artifactId>
+            <artifactId>ddd-show-code-app</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <!--  spi 出口标准-->
         <dependency>
             <groupId>ddd</groupId>
-            <artifactId>ddd-show-code-domain</artifactId>
+            <artifactId>ddd-show-code-spi</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
