提交新的模块

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>ddd-show-code-spi</module>
         <module>ddd-show-code-app</module>
         <module>ddd-show-code-controller</module>
+        <module>ddd-show-code-resource</module>
     </modules>
     <packaging>pom</packaging>
 
